parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BACKTICK
    BREAK
    CHAN
    COMILLASDOBLES
    CONST
    CONTINUE
    DEFAULT
    DEFER
    FALLTHROUGH
    FLOTANTEI
    GO
    GOTO
    ID
    INTERFACE
    MODULO
    RANGE
    RETURN
    SELECT
    STRUCT
    TYPE

Grammar

Rule 0     S' -> golang
Rule 1     golang -> asignacion
Rule 2     golang -> expression
Rule 3     golang -> condicional
Rule 4     golang -> bucleFor
Rule 5     golang -> funcion
Rule 6     golang -> imports
Rule 7     golang -> array
Rule 8     golang -> metodosPropiedadesArray
Rule 9     golang -> print
Rule 10    golang -> switch
Rule 11    golang -> map
Rule 12    golang -> metodosPropiedadesMap
Rule 13    asignacion -> asignacionMate
Rule 14    asignacion -> asignacionOtros
Rule 15    asignacionMate -> VAR VARIABLE TIPODATOS ASIGNADOR expression
Rule 16    asignacionMate -> VARIABLE DOSPUNTOS ASIGNADOR expression
Rule 17    asignacionMate -> VAR VARIABLE ASIGNADOR expression
Rule 18    asignacionOtros -> VAR VARIABLE TIPODATOS ASIGNADOR valoresOtros
Rule 19    asignacionOtros -> VARIABLE DOSPUNTOS ASIGNADOR valoresOtros
Rule 20    asignacionOtros -> VAR VARIABLE ASIGNADOR valoresOtros
Rule 21    asignacionOtros -> asignacionSuma
Rule 22    asignacionOtros -> asignacionResta
Rule 23    asignacionOtros -> asignacionMult
Rule 24    asignacionOtros -> asignacionDiv
Rule 25    asignacionSuma -> VARIABLE ASIGNADORSUM expression
Rule 26    asignacionResta -> VARIABLE ASIGNADORRESTA expression
Rule 27    asignacionMult -> VARIABLE ASIGNADORMULT expression
Rule 28    asignacionDiv -> VARIABLE ASIGNADORDIV expression
Rule 29    asigacionCorta -> DOSPUNTOS ASIGNADOR
Rule 30    valoresOtros -> STRING
Rule 31    valoresOtros -> BOOLEAN
Rule 32    funcion -> FUNCTION VARIABLE LPAREN RPAREN LLAVEIZ golang LLAVEDE
Rule 33    funcion -> FUNCTION VARIABLE LPAREN parametros RPAREN LLAVEIZ golang LLAVEDE
Rule 34    parametros -> valoresPosibles
Rule 35    parametros -> VARIABLE TIPODATOS
Rule 36    parametros -> VARIABLE TIPODATOS COMA parametros
Rule 37    imports -> package
Rule 38    imports -> import
Rule 39    package -> PACKAGE VARIABLE
Rule 40    import -> IMPORT variosImports
Rule 41    import -> IMPORT LPAREN variosImports RPAREN
Rule 42    variosImports -> STRING
Rule 43    variosImports -> STRING variosImports
Rule 44    array -> arrayNoInit
Rule 45    array -> arrayInit
Rule 46    arrayNoInit -> VAR VARIABLE CORCHETEIZ NUMBER CORCHETEDER TIPODATOS
Rule 47    arrayInit -> VARIABLE asigacionCorta CORCHETEIZ NUMBER CORCHETEDER TIPODATOS LLAVEIZ arrayElementos LLAVEDE
Rule 48    arrayElementos -> valoresPosibles
Rule 49    arrayElementos -> valoresPosibles COMA valoresPosibles
Rule 50    metodosPropiedadesArray -> slice
Rule 51    metodosPropiedadesArray -> remove
Rule 52    metodosPropiedadesArray -> sliceAsignacion
Rule 53    remove -> VARIABLE PUNTO REMOVE LPAREN NUMBER RPAREN
Rule 54    sliceAsignacion -> slice ASIGNADOR valoresPosibles
Rule 55    slice -> VARIABLE CORCHETEIZ valoresPosibles CORCHETEDER
Rule 56    map -> mapMake
Rule 57    map -> mapnoMake
Rule 58    mapMake -> VARIABLE asigacionCorta MAKE LPAREN MAP CORCHETEIZ TIPODATOS CORCHETEDER TIPODATOS RPAREN
Rule 59    mapnoMake -> VARIABLE asigacionCorta MAP CORCHETEIZ TIPODATOS CORCHETEDER TIPODATOS LLAVEIZ mapElementos LLAVEDE
Rule 60    mapElementos -> valoresPosibles DOSPUNTOS valoresPosibles
Rule 61    mapElementos -> valoresPosibles DOSPUNTOS valoresPosibles COMA mapElementos
Rule 62    metodosPropiedadesMap -> mapAppend
Rule 63    metodosPropiedadesMap -> mapDelete
Rule 64    mapAppend -> CORCHETEIZ valoresPosibles CORCHETEDER ASIGNADOR valoresPosibles
Rule 65    mapDelete -> DELETE LPAREN VARIABLE COMA valoresPosibles RPAREN
Rule 66    slice -> sliceNoInit
Rule 67    slice -> sliceInit
Rule 68    sliceNoInit -> VAR VARIABLE CORCHETEIZ NUMBER CORCHETEDER TIPODATOS
Rule 69    sliceInit -> VARIABLE asigacionCorta CORCHETEIZ NUMBER CORCHETEDER TIPODATOS LLAVEIZ sliceElementos LLAVEDE
Rule 70    sliceElementos -> valoresPosibles
Rule 71    sliceElementos -> valoresPosibles COMA valoresPosibles
Rule 72    metodosPropiedadesSlice -> slice
Rule 73    metodosPropiedadesSlice -> remove
Rule 74    metodosPropiedadesSlice -> sliceAsignacion
Rule 75    valoresPosibles -> NUMBER
Rule 76    valoresPosibles -> BOOLEAN
Rule 77    valoresPosibles -> STRING
Rule 78    valoresPosibles -> FLOTANTE
Rule 79    valoresPosibles -> VARIABLE
Rule 80    condicional -> tiposCondicion condicion LLAVEIZ golang LLAVEDE
Rule 81    condicional -> condicional ELSE LLAVEIZ golang LLAVEDE
Rule 82    tiposCondicion -> IF
Rule 83    tiposCondicion -> ELSE IF
Rule 84    condicion -> expression
Rule 85    condicion -> LPAREN expression comparadores expression RPAREN
Rule 86    condicion -> LPAREN expression comparadores expression RPAREN comparadores condicion
Rule 87    condicion -> expression comparadores condicion
Rule 88    comparadores -> MAYORQUE
Rule 89    comparadores -> MENORQUE
Rule 90    comparadores -> MAYOROIGUALQUE
Rule 91    comparadores -> MENOROIGUALQUE
Rule 92    comparadores -> EQUIVALENTE
Rule 93    comparadores -> DIFERENTE
Rule 94    bucleFor -> FOR asignacionFOR condicionFOR updateFOR LLAVEIZ golang LLAVEDE
Rule 95    asignacionFOR -> VARIABLE DOSPUNTOS ASIGNADOR expression PUNTOCOMA
Rule 96    condicionFOR -> VARIABLE comparadores expression PUNTOCOMA
Rule 97    updateFOR -> VARIABLE incrementoDecremento
Rule 98    incrementoDecremento -> INCREMENTO
Rule 99    incrementoDecremento -> DECREMENTO
Rule 100   print -> PRINT LPAREN parametro RPAREN
Rule 101   print -> PRINTLN LPAREN parametro RPAREN
Rule 102   print -> PRINTF LPAREN parametro RPAREN
Rule 103   parametro -> argumento
Rule 104   parametro -> argumento COMA parametro
Rule 105   argumento -> NUMBER
Rule 106   argumento -> FLOTANTE
Rule 107   argumento -> VARIABLE
Rule 108   argumento -> STRING
Rule 109   switch -> SWITCH argumento LLAVEIZ casos LLAVEDE
Rule 110   casos -> CASE argumento DOSPUNTOS golang
Rule 111   casos -> CASE argumento DOSPUNTOS golang casos
Rule 112   expression -> expression MAS term
Rule 113   expression -> expression RESTA term
Rule 114   expression -> term
Rule 115   term -> term MULTI factor
Rule 116   term -> term DIVIDE factor
Rule 117   term -> factor
Rule 118   factor -> NUMBER
Rule 119   factor -> FLOTANTE
Rule 120   factor -> VARIABLE
Rule 121   factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

ASIGNADOR            : 15 16 17 18 19 20 29 54 64 95
ASIGNADORDIV         : 28
ASIGNADORMULT        : 27
ASIGNADORRESTA       : 26
ASIGNADORSUM         : 25
BACKTICK             : 
BOOLEAN              : 31 76
BREAK                : 
CASE                 : 110 111
CHAN                 : 
COMA                 : 36 49 61 65 71 104
COMILLASDOBLES       : 
CONST                : 
CONTINUE             : 
CORCHETEDER          : 46 47 55 58 59 64 68 69
CORCHETEIZ           : 46 47 55 58 59 64 68 69
DECREMENTO           : 99
DEFAULT              : 
DEFER                : 
DELETE               : 65
DIFERENTE            : 93
DIVIDE               : 116
DOSPUNTOS            : 16 19 29 60 61 95 110 111
ELSE                 : 81 83
EQUIVALENTE          : 92
FALLTHROUGH          : 
FLOTANTE             : 78 106 119
FLOTANTEI            : 
FOR                  : 94
FUNCTION             : 32 33
GO                   : 
GOTO                 : 
ID                   : 
IF                   : 82 83
IMPORT               : 40 41
INCREMENTO           : 98
INTERFACE            : 
LLAVEDE              : 32 33 47 59 69 80 81 94 109
LLAVEIZ              : 32 33 47 59 69 80 81 94 109
LPAREN               : 32 33 41 53 58 65 85 86 100 101 102 121
MAKE                 : 58
MAP                  : 58 59
MAS                  : 112
MAYOROIGUALQUE       : 90
MAYORQUE             : 88
MENOROIGUALQUE       : 91
MENORQUE             : 89
MODULO               : 
MULTI                : 115
NUMBER               : 46 47 53 68 69 75 105 118
PACKAGE              : 39
PRINT                : 100
PRINTF               : 102
PRINTLN              : 101
PUNTO                : 53
PUNTOCOMA            : 95 96
RANGE                : 
REMOVE               : 53
RESTA                : 113
RETURN               : 
RPAREN               : 32 33 41 53 58 65 85 86 100 101 102 121
SELECT               : 
STRING               : 30 42 43 77 108
STRUCT               : 
SWITCH               : 109
TIPODATOS            : 15 18 35 36 46 47 58 58 59 59 68 69
TYPE                 : 
VAR                  : 15 17 18 20 46 68
VARIABLE             : 15 16 17 18 19 20 25 26 27 28 32 33 35 36 39 46 47 53 55 58 59 65 68 69 79 95 96 97 107 120
error                : 

Nonterminals, with rules where they appear

argumento            : 103 104 109 110 111
array                : 7
arrayElementos       : 47
arrayInit            : 45
arrayNoInit          : 44
asigacionCorta       : 47 58 59 69
asignacion           : 1
asignacionDiv        : 24
asignacionFOR        : 94
asignacionMate       : 13
asignacionMult       : 23
asignacionOtros      : 14
asignacionResta      : 22
asignacionSuma       : 21
bucleFor             : 4
casos                : 109 111
comparadores         : 85 86 86 87 96
condicion            : 80 86 87
condicionFOR         : 94
condicional          : 3 81
expression           : 2 15 16 17 25 26 27 28 84 85 85 86 86 87 95 96 112 113 121
factor               : 115 116 117
funcion              : 5
golang               : 32 33 80 81 94 110 111 0
import               : 38
imports              : 6
incrementoDecremento : 97
map                  : 11
mapAppend            : 62
mapDelete            : 63
mapElementos         : 59 61
mapMake              : 56
mapnoMake            : 57
metodosPropiedadesArray : 8
metodosPropiedadesMap : 12
metodosPropiedadesSlice : 
package              : 37
parametro            : 100 101 102 104
parametros           : 33 36
print                : 9
remove               : 51 73
slice                : 50 54 72
sliceAsignacion      : 52 74
sliceElementos       : 69
sliceInit            : 67
sliceNoInit          : 66
switch               : 10
term                 : 112 113 114 115 116
tiposCondicion       : 80
updateFOR            : 94
valoresOtros         : 18 19 20
valoresPosibles      : 34 48 49 49 54 55 60 60 61 61 64 64 65 70 71 71
variosImports        : 40 41 43

Parsing method: LALR

state 0

    (0) S' -> . golang
    (1) golang -> . asignacion
    (2) golang -> . expression
    (3) golang -> . condicional
    (4) golang -> . bucleFor
    (5) golang -> . funcion
    (6) golang -> . imports
    (7) golang -> . array
    (8) golang -> . metodosPropiedadesArray
    (9) golang -> . print
    (10) golang -> . switch
    (11) golang -> . map
    (12) golang -> . metodosPropiedadesMap
    (13) asignacion -> . asignacionMate
    (14) asignacion -> . asignacionOtros
    (112) expression -> . expression MAS term
    (113) expression -> . expression RESTA term
    (114) expression -> . term
    (80) condicional -> . tiposCondicion condicion LLAVEIZ golang LLAVEDE
    (81) condicional -> . condicional ELSE LLAVEIZ golang LLAVEDE
    (94) bucleFor -> . FOR asignacionFOR condicionFOR updateFOR LLAVEIZ golang LLAVEDE
    (32) funcion -> . FUNCTION VARIABLE LPAREN RPAREN LLAVEIZ golang LLAVEDE
    (33) funcion -> . FUNCTION VARIABLE LPAREN parametros RPAREN LLAVEIZ golang LLAVEDE
    (37) imports -> . package
    (38) imports -> . import
    (44) array -> . arrayNoInit
    (45) array -> . arrayInit
    (50) metodosPropiedadesArray -> . slice
    (51) metodosPropiedadesArray -> . remove
    (52) metodosPropiedadesArray -> . sliceAsignacion
    (100) print -> . PRINT LPAREN parametro RPAREN
    (101) print -> . PRINTLN LPAREN parametro RPAREN
    (102) print -> . PRINTF LPAREN parametro RPAREN
    (109) switch -> . SWITCH argumento LLAVEIZ casos LLAVEDE
    (56) map -> . mapMake
    (57) map -> . mapnoMake
    (62) metodosPropiedadesMap -> . mapAppend
    (63) metodosPropiedadesMap -> . mapDelete
    (15) asignacionMate -> . VAR VARIABLE TIPODATOS ASIGNADOR expression
    (16) asignacionMate -> . VARIABLE DOSPUNTOS ASIGNADOR expression
    (17) asignacionMate -> . VAR VARIABLE ASIGNADOR expression
    (18) asignacionOtros -> . VAR VARIABLE TIPODATOS ASIGNADOR valoresOtros
    (19) asignacionOtros -> . VARIABLE DOSPUNTOS ASIGNADOR valoresOtros
    (20) asignacionOtros -> . VAR VARIABLE ASIGNADOR valoresOtros
    (21) asignacionOtros -> . asignacionSuma
    (22) asignacionOtros -> . asignacionResta
    (23) asignacionOtros -> . asignacionMult
    (24) asignacionOtros -> . asignacionDiv
    (115) term -> . term MULTI factor
    (116) term -> . term DIVIDE factor
    (117) term -> . factor
    (82) tiposCondicion -> . IF
    (83) tiposCondicion -> . ELSE IF
    (39) package -> . PACKAGE VARIABLE
    (40) import -> . IMPORT variosImports
    (41) import -> . IMPORT LPAREN variosImports RPAREN
    (46) arrayNoInit -> . VAR VARIABLE CORCHETEIZ NUMBER CORCHETEDER TIPODATOS
    (47) arrayInit -> . VARIABLE asigacionCorta CORCHETEIZ NUMBER CORCHETEDER TIPODATOS LLAVEIZ arrayElementos LLAVEDE
    (55) slice -> . VARIABLE CORCHETEIZ valoresPosibles CORCHETEDER
    (66) slice -> . sliceNoInit
    (67) slice -> . sliceInit
    (53) remove -> . VARIABLE PUNTO REMOVE LPAREN NUMBER RPAREN
    (54) sliceAsignacion -> . slice ASIGNADOR valoresPosibles
    (58) mapMake -> . VARIABLE asigacionCorta MAKE LPAREN MAP CORCHETEIZ TIPODATOS CORCHETEDER TIPODATOS RPAREN
    (59) mapnoMake -> . VARIABLE asigacionCorta MAP CORCHETEIZ TIPODATOS CORCHETEDER TIPODATOS LLAVEIZ mapElementos LLAVEDE
    (64) mapAppend -> . CORCHETEIZ valoresPosibles CORCHETEDER ASIGNADOR valoresPosibles
    (65) mapDelete -> . DELETE LPAREN VARIABLE COMA valoresPosibles RPAREN
    (25) asignacionSuma -> . VARIABLE ASIGNADORSUM expression
    (26) asignacionResta -> . VARIABLE ASIGNADORRESTA expression
    (27) asignacionMult -> . VARIABLE ASIGNADORMULT expression
    (28) asignacionDiv -> . VARIABLE ASIGNADORDIV expression
    (118) factor -> . NUMBER
    (119) factor -> . FLOTANTE
    (120) factor -> . VARIABLE
    (121) factor -> . LPAREN expression RPAREN
    (68) sliceNoInit -> . VAR VARIABLE CORCHETEIZ NUMBER CORCHETEDER TIPODATOS
    (69) sliceInit -> . VARIABLE asigacionCorta CORCHETEIZ NUMBER CORCHETEDER TIPODATOS LLAVEIZ sliceElementos LLAVEDE

    FOR             shift and go to state 19
    FUNCTION        shift and go to state 20
    PRINT           shift and go to state 30
    PRINTLN         shift and go to state 31
    PRINTF          shift and go to state 32
    SWITCH          shift and go to state 33
    VAR             shift and go to state 38
    VARIABLE        shift and go to state 21
    IF              shift and go to state 44
    ELSE            shift and go to state 18
    PACKAGE         shift and go to state 45
    IMPORT          shift and go to state 46
    CORCHETEIZ      shift and go to state 47
    DELETE          shift and go to state 51
    NUMBER          shift and go to state 48
    FLOTANTE        shift and go to state 52
    LPAREN          shift and go to state 22

    golang                         shift and go to state 1
    asignacion                     shift and go to state 2
    expression                     shift and go to state 3
    condicional                    shift and go to state 4
    bucleFor                       shift and go to state 5
    funcion                        shift and go to state 6
    imports                        shift and go to state 7
    array                          shift and go to state 8
    metodosPropiedadesArray        shift and go to state 9
    print                          shift and go to state 10
    switch                         shift and go to state 11
    map                            shift and go to state 12
    metodosPropiedadesMap          shift and go to state 13
    asignacionMate                 shift and go to state 14
    asignacionOtros                shift and go to state 15
    term                           shift and go to state 16
    tiposCondicion                 shift and go to state 17
    package                        shift and go to state 23
    import                         shift and go to state 24
    arrayNoInit                    shift and go to state 25
    arrayInit                      shift and go to state 26
    slice                          shift and go to state 27
    remove                         shift and go to state 28
    sliceAsignacion                shift and go to state 29
    mapMake                        shift and go to state 34
    mapnoMake                      shift and go to state 35
    mapAppend                      shift and go to state 36
    mapDelete                      shift and go to state 37
    asignacionSuma                 shift and go to state 39
    asignacionResta                shift and go to state 40
    asignacionMult                 shift and go to state 41
    asignacionDiv                  shift and go to state 42
    factor                         shift and go to state 43
    sliceNoInit                    shift and go to state 49
    sliceInit                      shift and go to state 50

state 1

    (0) S' -> golang .



state 2

    (1) golang -> asignacion .

    $end            reduce using rule 1 (golang -> asignacion .)
    LLAVEDE         reduce using rule 1 (golang -> asignacion .)
    CASE            reduce using rule 1 (golang -> asignacion .)


state 3

    (2) golang -> expression .
    (112) expression -> expression . MAS term
    (113) expression -> expression . RESTA term

    $end            reduce using rule 2 (golang -> expression .)
    LLAVEDE         reduce using rule 2 (golang -> expression .)
    CASE            reduce using rule 2 (golang -> expression .)
    MAS             shift and go to state 53
    RESTA           shift and go to state 54


state 4

    (3) golang -> condicional .
    (81) condicional -> condicional . ELSE LLAVEIZ golang LLAVEDE

    $end            reduce using rule 3 (golang -> condicional .)
    LLAVEDE         reduce using rule 3 (golang -> condicional .)
    CASE            reduce using rule 3 (golang -> condicional .)
    ELSE            shift and go to state 55


state 5

    (4) golang -> bucleFor .

    $end            reduce using rule 4 (golang -> bucleFor .)
    LLAVEDE         reduce using rule 4 (golang -> bucleFor .)
    CASE            reduce using rule 4 (golang -> bucleFor .)


state 6

    (5) golang -> funcion .

    $end            reduce using rule 5 (golang -> funcion .)
    LLAVEDE         reduce using rule 5 (golang -> funcion .)
    CASE            reduce using rule 5 (golang -> funcion .)


state 7

    (6) golang -> imports .

    $end            reduce using rule 6 (golang -> imports .)
    LLAVEDE         reduce using rule 6 (golang -> imports .)
    CASE            reduce using rule 6 (golang -> imports .)


state 8

    (7) golang -> array .

    $end            reduce using rule 7 (golang -> array .)
    LLAVEDE         reduce using rule 7 (golang -> array .)
    CASE            reduce using rule 7 (golang -> array .)


state 9

    (8) golang -> metodosPropiedadesArray .

    $end            reduce using rule 8 (golang -> metodosPropiedadesArray .)
    LLAVEDE         reduce using rule 8 (golang -> metodosPropiedadesArray .)
    CASE            reduce using rule 8 (golang -> metodosPropiedadesArray .)


state 10

    (9) golang -> print .

    $end            reduce using rule 9 (golang -> print .)
    LLAVEDE         reduce using rule 9 (golang -> print .)
    CASE            reduce using rule 9 (golang -> print .)


state 11

    (10) golang -> switch .

    $end            reduce using rule 10 (golang -> switch .)
    LLAVEDE         reduce using rule 10 (golang -> switch .)
    CASE            reduce using rule 10 (golang -> switch .)


state 12

    (11) golang -> map .

    $end            reduce using rule 11 (golang -> map .)
    LLAVEDE         reduce using rule 11 (golang -> map .)
    CASE            reduce using rule 11 (golang -> map .)


state 13

    (12) golang -> metodosPropiedadesMap .

    $end            reduce using rule 12 (golang -> metodosPropiedadesMap .)
    LLAVEDE         reduce using rule 12 (golang -> metodosPropiedadesMap .)
    CASE            reduce using rule 12 (golang -> metodosPropiedadesMap .)


state 14

    (13) asignacion -> asignacionMate .

    $end            reduce using rule 13 (asignacion -> asignacionMate .)
    LLAVEDE         reduce using rule 13 (asignacion -> asignacionMate .)
    CASE            reduce using rule 13 (asignacion -> asignacionMate .)


state 15

    (14) asignacion -> asignacionOtros .

    $end            reduce using rule 14 (asignacion -> asignacionOtros .)
    LLAVEDE         reduce using rule 14 (asignacion -> asignacionOtros .)
    CASE            reduce using rule 14 (asignacion -> asignacionOtros .)


state 16

    (114) expression -> term .
    (115) term -> term . MULTI factor
    (116) term -> term . DIVIDE factor

    MAS             reduce using rule 114 (expression -> term .)
    RESTA           reduce using rule 114 (expression -> term .)
    $end            reduce using rule 114 (expression -> term .)
    MAYORQUE        reduce using rule 114 (expression -> term .)
    MENORQUE        reduce using rule 114 (expression -> term .)
    MAYOROIGUALQUE  reduce using rule 114 (expression -> term .)
    MENOROIGUALQUE  reduce using rule 114 (expression -> term .)
    EQUIVALENTE     reduce using rule 114 (expression -> term .)
    DIFERENTE       reduce using rule 114 (expression -> term .)
    LLAVEIZ         reduce using rule 114 (expression -> term .)
    RPAREN          reduce using rule 114 (expression -> term .)
    LLAVEDE         reduce using rule 114 (expression -> term .)
    CASE            reduce using rule 114 (expression -> term .)
    PUNTOCOMA       reduce using rule 114 (expression -> term .)
    MULTI           shift and go to state 56
    DIVIDE          shift and go to state 57


state 17

    (80) condicional -> tiposCondicion . condicion LLAVEIZ golang LLAVEDE
    (84) condicion -> . expression
    (85) condicion -> . LPAREN expression comparadores expression RPAREN
    (86) condicion -> . LPAREN expression comparadores expression RPAREN comparadores condicion
    (87) condicion -> . expression comparadores condicion
    (112) expression -> . expression MAS term
    (113) expression -> . expression RESTA term
    (114) expression -> . term
    (115) term -> . term MULTI factor
    (116) term -> . term DIVIDE factor
    (117) term -> . factor
    (118) factor -> . NUMBER
    (119) factor -> . FLOTANTE
    (120) factor -> . VARIABLE
    (121) factor -> . LPAREN expression RPAREN
